<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">File</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="content">内容</string>
    <string name="btSave">保存</string>
    <string name="fileName">文件名称</string>
    <string name="hintFileName">这里输入文件名称</string>
    <string name="hintFileContent">这里输入文件内容</string>
    <string name="success">保存成功</string>
    <string name="fail">保存失败</string>
    
</resources>
